fix(ios): baseline alignment for category pill
https://app.asana.com/0/0/1203247676252368/f

--- a/shared/scss/views/_tracker-networks.scss
+++ b/shared/scss/views/_tracker-networks.scss
@@ -74,6 +74,7 @@
     .url-list-item {
         display: flex;
         margin-top: 7px;
+        align-items: baseline;
     }
     .url {
         width: 100%;
